infra/k8s/web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verolas-web
  labels:
    project: verolas
    component: web
